--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="android.view.View" />
+
+        <import type="android.graphics.Color" />
 
         <variable
             name="viewModel"
@@ -33,8 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="@{viewModel.note.NTitle}"
                 android:fontFamily="@font/nunito_black"
+                android:text="@{viewModel.note.NTitle}"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/editNoteImageView"
@@ -48,8 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
-                android:textFontWeight="600"
                 android:text="@{viewModel.note.CName}"
+                android:textFontWeight="600"
                 android:textSize="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/isDoneTextView"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -62,9 +65,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:textFontWeight="400"
                 android:text="@{viewModel.note.NDescription}"
                 android:textColor="@color/descriptionTextColor"
+                android:textFontWeight="400"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -87,9 +90,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="@{viewModel.date}"
+                android:textAlignment="viewStart"
                 android:textFontWeight="600"
                 android:textSize="14sp"
-                android:textAlignment="viewStart"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -99,11 +102,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ic_left_arrow"
+                android:backgroundTint="@{viewModel.note!=null ? Color.parseColor(viewModel.note.pColor):0}"
                 android:gravity="center|end"
                 android:paddingStart="16dp"
                 android:paddingTop="4dp"
                 android:paddingEnd="8dp"
-                android:backgroundTint="@{viewModel.color}"
                 android:paddingBottom="4dp"
                 android:text="@{viewModel.note.PName}"
                 android:textColor="@color/white"
@@ -130,9 +133,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:textFontWeight="600"
                 android:text='@{viewModel.note.NDone ? "Выполнено" : "Не Выполнено"}'
                 android:textColor="#69B76C"
+                android:textFontWeight="600"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editNoteImageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
