--- a/app/src/main/res/menu/sign_out.xml
+++ b/app/src/main/res/menu/sign_out.xml
@@ -5,5 +5,9 @@
         android:id="@+id/signOut"
         android:icon="@drawable/ic_log_out"
         android:title="@string/sign_out"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_refresh"
+        app:showAsAction="never"
+        android:title="@string/menu_refresh"/>
 </menu>
